[package]
name = "mx002"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12.1"
rusb = "0.9.3"
signal-hook = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.28", features = ["user"] }
[profile.release]
strip = true
lto = true
panic = "abort"


